add file based routing

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "generouted": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-location": "^3.3.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
