--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@tanstack/react-location": "^3.7.4",
     "eslint": "^8.20.0",
     "framer-motion": "^6.5.1",
     "generouted": "^1.4.0",
