--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-location": "^3.7.4",
     "eslint": "^8.20.0",
     "framer-motion": "^6.5.1",
