--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # example netlify.toml
 [build]
   command = "vite build"
-  functions = "netlify/functions"
+  functions = "functions"
   publish = "dist"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
@@ -13,9 +13,9 @@
 
   ## (optional) Settings for Netlify Dev
   ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+  [dev]
+    targetPort = 5173
+    port = 8888 # Port that the dev server will be listening on
+    publish = "dist" # Folder with the static content for _redirect file
 
   ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/
