--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "generouted": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "6.3.0",
     "react-location": "^3.3.4"
   },
   "devDependencies": {
