--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "generouted": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
