convert to remix 💿

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-# REPLACE <password> with the db password
+# REPLACE {USERNAME} & {PASSWORD} in the DATABASE_URL
 
-DATABASE_URL="mongodb+srv://root:<password>@hoots.phtcsnb.mongodb.net/?retryWrites=true&w=majority"
-VITE_API_URL="http://localhost:8888"
+DATABASE_URL="mongodb+srv://{USERNAME}:{PASSWORD}.phtcsnb.mongodb.net/hoots?retryWrites=true&w=majority"
+API_URL="http://localhost:3000"
