--- a/package.json
+++ b/package.json
@@ -1,41 +1,47 @@
 {
   "name": "hoots",
   "private": true,
-  "version": "0.0.2",
-  "type": "module",
+  "sideEffects": false,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "start": "netlify dev"
+    "build": "remix build",
+    "dev": "remix dev",
+    "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@netlify/functions": "^1.0.0",
     "@prisma/client": "^4.1.0",
-    "@tanstack/react-location": "^3.7.4",
+    "@remix-run/netlify": "^1.6.8",
+    "@remix-run/node": "^1.6.8",
+    "@remix-run/react": "^1.6.8",
+    "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
-    "generouted": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@remix-run/dev": "^1.6.8",
+    "@remix-run/eslint-config": "^1.6.8",
+    "@remix-run/serve": "^1.6.8",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.0",
+    "eslint": "^8.20.0",
     "netlify-cli": "^10.11.1",
     "prisma": "^4.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.0.0"
+    "typescript": "^4.7.4"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
