--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/netlify": "^1.6.8",
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
+    "cloudinary": "^1.30.1",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
