replace API_URL with URL for feature branches

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # REPLACE {USERNAME} & {PASSWORD} in the DATABASE_URL
 
 DATABASE_URL="mongodb+srv://{USERNAME}:{PASSWORD}.phtcsnb.mongodb.net/hoots?retryWrites=true&w=majority"
-API_URL="http://localhost:3000"
+URL="http://localhost:3000"
 CLOUDINARY_URL=cloudinary://{API_KEY}:{SECRET_KEY}@hoots
 
