--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
+    "build": "npx prisma generate && remix build",
     "dev": "remix dev",
     "start": "cross-env NODE_ENV=production netlify dev"
   },
