--- a/netlify.toml
+++ b/netlify.toml
@@ -3,9 +3,9 @@
   publish = "public"
   functions = "functions"
 
-[context.deploy-preview]
-  command = "export API_URL=$DEPLOY_URL && remix build"
-  
+[[plugins]]
+  package = "netlify-plugin-inline-functions-env"
+
 [dev]
   command = "remix watch"
   port = 3000
