--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "echo $DEPLOY_URL && remix build"
+  command = "node -p "process.env" && remix build"
   publish = "public"
   functions = "functions"
 
