--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
-  command = "node -p process.env && remix build"
+  command = "sed -i \"s|API_PLACEHOLDER|${DEPLOY_PRIME_URL}|g\" netlify.toml && remix build"
   publish = "public"
   functions = "functions"
+
+[context.deploy-preview.environment]
+  API_URL = API_PLACEHOLDER
 
 [dev]
   command = "remix watch"
