--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@remix-run/netlify": "^1.6.8",
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.6.8",
+    "bcrypt": "^5.0.1",
     "cloudinary": "^1.30.1",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
@@ -34,6 +35,7 @@
     "@remix-run/dev": "^1.6.8",
     "@remix-run/eslint-config": "^1.6.8",
     "@remix-run/serve": "^1.6.8",
+    "@types/bcrypt": "^5.0.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
