--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "lodash.debounce": "^4.0.8",
+    "mailgun.js": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
