--- a/package.json
+++ b/package.json
@@ -9,43 +9,44 @@
     "start": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.4",
-    "@chakra-ui/react": "^2.2.4",
-    "@emotion/react": "^11.9.3",
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.9.3",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@netlify/functions": "^1.0.0",
-    "@prisma/client": "^4.1.0",
-    "@remix-run/netlify": "^1.6.8",
+    "@netlify/functions": "^1.3.0",
+    "@prisma/client": "^4.5.0",
+    "@remix-run/netlify": "^1.7.3",
     "@remix-run/node": "^1.6.8",
-    "@remix-run/react": "^1.6.8",
-    "bcrypt": "^5.0.1",
-    "cloudinary": "^1.30.1",
+    "@remix-run/react": "^1.7.3",
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cross-env": "^7.0.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
+    "isbot": "^3.6.1",
     "lodash.debounce": "^4.0.8",
     "mailgun.js": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.6.8",
-    "@remix-run/eslint-config": "^1.6.8",
+    "@remix-run/dev": "^1.7.3",
+    "@remix-run/eslint-config": "^1.7.3",
     "@remix-run/serve": "^1.6.8",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash.debounce": "^4.0.7",
-    "@types/node": "^18.0.6",
-    "@types/react": "^18.0.15",
+    "@types/node": "^18.11.3",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "eslint": "^8.20.0",
-    "netlify-cli": "^10.11.1",
-    "prisma": "^4.1.0",
-    "typescript": "^4.7.4"
+    "eslint": "^8.26.0",
+    "netlify-cli": "^10.18.0",
+    "prisma": "^4.5.0",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=14"
