--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "eslint": "^8.26.0",
     "netlify-cli": "^10.18.0",
     "postcss": "^8.4.19",
+    "postcss-cli": "^10.0.0",
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "engines": {
