Migrate browse page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@remix-run/netlify": "^1.7.3",
     "@remix-run/node": "^1.6.8",
     "@remix-run/react": "^1.7.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "clsx": "^1.2.1",
@@ -44,6 +45,7 @@
     "@remix-run/dev": "^1.7.3",
     "@remix-run/eslint-config": "^1.7.3",
     "@remix-run/serve": "^1.6.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.11.3",
