--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "npm run build:css && remix build",
     "dev": "remix dev",
     "start": "concurrently \"npm run dev:css\" \"npm run dev:netlify\" ",
-    "dev:netlify": "cross-env NODE_ENV=production netlify dev",
+    "dev:netlify": "cross-env NODE_ENV=development netlify dev",
     "build:css": "concurrently \"tailwindcss -o ./app/styles/tailwind.css\" \"postcss styles --base styles --dir app/styles --env production\"",
-    "dev:css": "concurrently \"postcss styles --base styles --dir app/styles -w\" \"tailwindcss -o ./app/styles/tailwind.css --watch\""
+    "dev:css": "concurrently \"postcss styles --base styles --dir app/styles -w\" \"tailwindcss -o ./app/styles/tailwind.css --watch\"",
+    "lint": "eslint app/**/*.{tsx,ts}"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.12",
@@ -17,6 +18,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
+    "@floating-ui/react-dom-interactions": "^0.12.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
@@ -39,7 +41,9 @@
     "lodash.debounce": "^4.0.8",
     "mailgun.js": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-merge-refs": "^2.0.1",
+    "react-slider": "^2.0.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.3",
@@ -51,9 +55,18 @@
     "@types/node": "^18.11.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-slider": "^1.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "netlify-cli": "^10.18.0",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.0.0",
