--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@remix-run/eslint-config": "^1.7.3",
     "@remix-run/serve": "^1.6.8",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.11.3",
