--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.0.1",
-    "react-slider": "^2.0.4"
+    "react-slider": "^2.0.4",
+    "stripe": "^11.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.3",
