--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "^18.2.0",
     "react-merge-refs": "^2.0.1",
     "react-slider": "^2.0.4",
-    "stripe": "^11.5.0"
+    "stripe": "^11.5.0",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.3",
