--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,4 @@
 DATABASE_URL="mongodb+srv://{USERNAME}:{PASSWORD}.phtcsnb.mongodb.net/hoots?retryWrites=true&w=majority"
 API_URL="http://localhost:3000"
 CLOUDINARY_URL=cloudinary://{API_KEY}:{SECRET_KEY}@hoots
-
+STRIPE_SK="sk_test_hash"
