--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mailgun.js": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-merge-refs": "^2.0.1",
     "react-slider": "^2.0.4",
     "stripe": "^11.5.0",
