--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "dev": "remix dev",
-    "start": "concurrently \"npm run dev:css\" \"npm run dev:netlify\" \"npm run stripe-listen\" ",
+    "start": "concurrently \"npm run dev:netlify\" \"npm run stripe-listen\" ",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
-    "build:css": "postcss styles --base styles --dir app/styles --env production",
-    "dev:css": "postcss styles --base styles --dir app/styles -w",
     "lint": "eslint app/**/*.{tsx,ts}",
     "stripe-listen": "stripe listen --forward-to localhost:3000/stripe/hook",
     "postinstall": "prisma generate"
@@ -24,9 +22,9 @@
     "@heroicons/react": "^2.0.13",
     "@netlify/functions": "^1.3.0",
     "@prisma/client": "^4.5.0",
-    "@remix-run/netlify": "^1.7.3",
-    "@remix-run/node": "^1.6.8",
-    "@remix-run/react": "^1.7.3",
+    "@remix-run/netlify": "^1.16.1",
+    "@remix-run/node": "^1.16.1",
+    "@remix-run/react": "^1.16.1",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "clsx": "^1.2.1",
@@ -47,9 +45,9 @@
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.7.3",
-    "@remix-run/eslint-config": "^1.7.3",
-    "@remix-run/serve": "^1.6.8",
+    "@remix-run/dev": "^1.16.1",
+    "@remix-run/eslint-config": "^1.16.1",
+    "@remix-run/serve": "^1.16.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/bcrypt": "^5.0.0",
