fix build script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "version": "0.0.1",
   "scripts": {
-    "build": "npm run build:css && remix build",
+    "build": "remix build",
     "dev": "remix dev",
     "start": "concurrently \"npm run dev:netlify\" \"npm run stripe-listen\" ",
     "dev:netlify": "cross-env NODE_ENV=development netlify dev",
